# sage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile_so101  JointGap_Architecture_Design.md  README.md  README_SIM2REAL.md  osmo_workflow.yaml  pyproject.toml  requirements.txt  run_docker.sh
assets/: robot_env.usd
assets/h1_2/: h1_2.usd
assets/h1_2/configuration/: h1_2_base.usd  h1_2_physics.usd
assets/realman_WR75S/: realman_WR75S.usd
assets/realman_WR75S/configuration/: realman_WR75S_base.usd  realman_WR75S_physics.usd  realman_WR75S_robot.usd  realman_WR75S_sensor.usd
configs/: g1_valid_joints.txt  h1_2_joints.yaml  h1_2_valid_joints.txt  so101_joints.yaml  so101_valid_joints.txt  wr75s_valid_joints.txt
docs/: CONTRIBUTOR.md  GAPONET_PLUGIN.md  LEROBOT_REAL.md  NEW_ROBOT.md  Q&A.md  REALMAN_REAL.md  UNITREE_REAL.md
joint_motion_gap/: __init__.py  analysis.py  assets.py  simulation.py
joint_motion_gap/real_h1_2/: README.md  real_h1_2.py
joint_motion_gap/real_realman/: README.md  __init__.py  real_realman.py  realman_class.py  realman_collector.py  realman_humanoid.py
joint_motion_gap/real_realman/Robotic_Arm/: rm_ctypes_wrap.py  rm_robot_interface.py
joint_motion_gap/real_unitree/: README.md  crc.py  g1_amass_test.pkl  gamepad.py  h12_amass_test.pkl  hardware_data_collect.py  robot_config.py
models/: .gitignore  policy.pt
motion_files/g1/: 0-BMLmovi_Subject_47_F_MoSh_Subject_47_F_14_poses.pkl  0-KIT_3_lean_over_table04_poses.pkl  0-KIT_674_dry_head03_poses.pkl  0-KIT_675_double_pour_and_mixing15_poses.pkl
motion_files/g1/amass/: 0-BMLmovi_Subject_47_F_MoSh_Subject_47_F_14_poses.txt  0-KIT_3_kneel_up_hold02_poses.pkl  0-KIT_3_kneel_up_hold02_poses.txt  0-KIT_3_lean_over_table04_poses.txt  0-KIT_3_wave_right15_poses.pkl  0-KIT_3_wave_right15_poses.txt  0-KIT_441_drinking03_poses.pkl  0-KIT_441_drinking03_poses.txt  0-KIT_674_dry_head03_poses.txt  0-KIT_674_wash_front03_poses.pkl  0-KIT_674_wash_front03_poses.txt  0-KIT_675_double_pour_and_mixing15_poses.txt  0-MPI_mosh_50020_shake_hips_poses.pkl  0-MPI_mosh_50020_shake_hips_poses.txt  0-SSM_synced_20160330_03333_chicken_wings_poses.pkl  0-SSM_synced_20160330_03333_chicken_wings_poses.txt
motion_files/gr1t2/sample/: simple_wave.txt
motion_files/h1_2/amass/: 0-141_22_poses_action_sequence.txt  0-E11-body_hook_right_t2_poses_action_sequence.txt  0-Subject_33_F_13_poses_action_sequence.txt  0-Subject_4_F_5_poses_action_sequence.txt  0-Subject_66_F_20_poses_action_sequence.txt  0-Subject_82_F_6_poses_action_sequence.txt  0-Subject_8_F_16_poses_action_sequence.txt  0-castBox02_poses_action_sequence.txt  0-guitar_right01_poses_action_sequence.txt  0-punch_left01_poses_action_sequence.txt  0-punch_left02_poses_action_sequence.txt  0-punch_right02_poses_action_sequence.txt  0-punch_right03_poses_action_sequence.txt  0-punching03_poses_action_sequence.txt  0-stir_left02_poses_action_sequence.txt  0-stir_left07_poses_action_sequence.txt  (+1 more)
sage/: __init__.py  analysis.py  assets.py  simulation.py  simulation_lab.py
sage/real_realman/: realman_collector.py  realman_dual_arm.py
sage/real_so101/: __init__.py  so101_lerobot_collector.py
sage/real_unitree/: crc.py  gamepad.py  unitree_collector.py  unitree_configs.py
sage/robots/: realman.py  unitree.py
scripts/: compare_gaponet.py  gen_sysid_motions.py  run_analysis.py  run_real.py  run_simulation.py  run_simulation_gaponet.py  test_gaponet.py
scripts/rsl_rl/: delta_action.sh  play.py  plot_delta_action.py  train.py
(+547 files in other folders)
