[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "0.1.0"
description = "SAGE: Sim2Real Actuator Gap Estimator for Robot Performance Evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "SAGE Team"},
]
keywords = ["robotics", "simulation", "isaac-sim", "motion-analysis", "sim-to-real"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas>=1.3.0",
    "xlsxwriter",
    "pyyaml",
]

[tool.setuptools]
packages = ["sage"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
]

[tool.ruff.lint.isort]
known-third-party = [
    "isaacsim.core.api",
    "omni.replicator.core",
    "pxr",
    "omni.kit",
    "warp",
    "carb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
